--- a/mage/expedia-analytics/pipelines/gcs_to_bigquery/metadata.yaml
+++ b/mage/expedia-analytics/pipelines/gcs_to_bigquery/metadata.yaml
@@ -3,7 +3,23 @@ blocks:
   color: null
   configuration: {}
   downstream_blocks:
-  - transform_expedia
+  - transform_expedia_data
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: load_countries_gcs
+  retry_config: null
+  status: executed
+  timeout: null
+  type: data_loader
+  upstream_blocks: []
+  uuid: load_countries_gcs
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks:
+  - transform_expedia_data
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -19,7 +35,7 @@ blocks:
   color: null
   configuration: {}
   downstream_blocks:
-  - transform_expedia
+  - transform_expedia_data
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -39,7 +55,7 @@ blocks:
   executor_type: local_python
   has_callback: false
   language: python
-  name: transform_expedia
+  name: transform_expedia_data
   retry_config: null
   status: updated
   timeout: null
@@ -47,14 +63,15 @@ blocks:
   upstream_blocks:
   - load_train_gcs
   - load_test_gcs
-  uuid: transform_expedia
+  - load_countries_gcs
+  uuid: transform_expedia_data
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
 conditionals: []
-created_at: '2024-04-08 16:58:28.733112+00:00'
+created_at: '2024-04-12 18:35:31.396849+00:00'
 data_integration: null
-description: Loads and transforms data from GCS to BigQuery.
+description: null
 executor_config: {}
 executor_count: 1
 executor_type: null
